<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.android.authenticator.ui.IntroActivity">
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnPrevious" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPrevious"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:visibility="invisible"
        app:icon="@drawable/ic_outline_arrow_left_alt_24"
        app:iconSize="30dp"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal" />
    <com.android.authenticator.ui.intro.SlideIndicator
        android:id="@+id/slideIndicator"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toEndOf="@+id/btnPrevious"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintBottom_toBottomOf="parent" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        app:icon="@drawable/ic_outline_arrow_right_alt_24"
        app:iconSize="30dp"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal" />
</androidx.constraintlayout.widget.ConstraintLayout>
