...
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="?attr/colorOnSurface"
                    android:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

...
